--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,11 +1,21 @@
 {% extends "layout.html" %}
 {% block body %}
 <div style="margin-top: 50px;" class="ui container">
-  <h2 class="ui center aligned header" > Welcome to Study Abroad Circle! </h2>
+  <h2 class="ui center aligned header" > Sign up | Study Abroad Circle </h2>
   {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <a class="ui right floated blue button" href="/signup" method="GET">Sign up</a>
-  <a class="ui left floated green button" href="/login" method="GET">Log in</a>
-</div>
+  <form class="ui form" action="/signup" method="POST">
+    <div class="field">
+      <label>Username </label>
+      <input type=text name=username placeholder="Create username">
+    </div>
+    <div class="field">
+      <label>Password </label>
+      <input type=password name=password placeholder="Create password">
+    </div>
+    <div style="margin-top: 20px;">
+        <button class="ui right floated blue button" value=Signup>Sign up</button>
+    </div>
+  </form>
 {% for message in get_flashed_messages() %}
             <div class=flash>{{ message }}</div>
         {% endfor %} 
