--- a/app/templates/resources.html
+++ b/app/templates/resources.html
@@ -49,7 +49,7 @@
             <div class="column">
               <div class="ui icon header">
                 <i class="write icon"></i>
-                <a href="https://eisha.notion.site/Guides-0f69b6736d5648d297af1e98a225041b" target="_blank">Blogs / Application Guides</a>
+                <a href="https://www.notion.so/eisha/Study-Abroad-Circle-Resources-e48d8d33cdce44ea9bd388f286927625" target="_blank">Blogs / Application Guides</a>
               </div>
             </div>
           </div>
