--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -13,7 +13,7 @@
         <p style="margin-bottom: 20px;">Whether you're just starting to explore the idea of studying abroad or you're ready to take the next steps, Study Abroad Circle is here to support you every step of the way. Join our community today and start your journey towards a global education.</p>
       </div>
       <div class="column">
-        <img src="https://via.placeholder.com/500x300" alt="Image of students studying abroad">
+        <img src="{{ url_for('static', filename='images/2023-03-04-195535.jpg') }}" alt="image of students studying abroad">
       </div>
     </div>
     <div class="ui center aligned segment" style="border: none;">
