--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -8,9 +8,9 @@
     {% endif %}
     <div class="ui two column stackable grid">
       <div class="column">
-        <p style="margin-bottom: 20px;">At Study Abroad Circle, our mission is to help students achieve their dreams of studying abroad. We provide resources, opportunities, and mentorship to help students navigate the complex process of studying in a foreign country.</p>
-        <p style="margin-bottom: 20px;">Our team consists of experienced professionals who have studied and worked abroad themselves. We understand the challenges and rewards of studying in a foreign country, and we are committed to helping students make the most of their international education.</p>
-        <p style="margin-bottom: 20px;">Whether you're just starting to explore the idea of studying abroad or you're ready to take the next steps, Study Abroad Circle is here to support you every step of the way. Join our community today and start your journey towards a global education.</p>
+        <p style="margin-bottom: 20px;">At Study Abroad Circle, our mission is to help Pakistani highschool students achieve their dreams of studying abroad for short and long term study abroad programs on scholarships.</p>
+        <p style="margin-bottom: 20px;">We provide resources, opportunities, and mentorship to help students navigate the complex process of studying in a foreign country.</p>
+        <p style="margin-bottom: 20px;">Join our community today and start your journey towards a global education!</p>
       </div>
       <div class="column">
         <img src="{{ url_for('static', filename='images/2023-03-04-195535.jpg') }}" alt="image of students studying abroad">
