--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,7 +4,7 @@
 <div class=page>
   <div class=metanav>
   {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
+    <a href="{{ url_for('login') }}">log in</a><br>
     <a href="{{ url_for('sign_up') }}">sign up</a>
   {% else %}
     <a href="{{ url_for('logout') }}">log out</a>
