--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,6 +30,23 @@
                 </a>
             </div>
         </div>
+
+        <div style="margin-top: 50px; text-align: justify;" class="ui container">
+    <p>
+        Thanks for logging in and taking the first step towards your study abroad journey!
+    </p>
+    <p>
+        You can explore resources (videos/guides) from the menu above if you have a scholarship program in mind. 
+    <p>
+        
+        If not, don't worry! Head over to "Opportunities" to chat with our AI chatbot to learn how to look for the right scholarships for you.
+    </p>
+    <p>
+        You can also sign up for mentorship or for support group chats. 
+    </p>
+</div>
+
     </div>
 </body>
 </html>
+"
