--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -10,7 +10,6 @@
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
     <div style="margin-top: 50px;" class="ui container">
     <h1 class="ui center aligned header"> Study Abroad Circle </h1>
- 
 
     <div class="ui pointing menu">
         <a class="active item" href="">
@@ -31,11 +30,28 @@
             <a href="{{ url_for('mentorship') }}">Mentorship</a></button> 
           </a>
         </div>
+      </div>
     </div>
-  </div>
+    
 
-    <h3 class="ui header">Under Construction</h3>
-      <button class="ui olive green button">
-        <a href="https://forms.gle/RMxrk8wMNoaBHLK96" target="_blank"> Access Sign Up Form </a>
-      </button>
-      
+
+      <div class="ui placeholder segment">
+        <div class="ui three column stackable center aligned grid">
+          <div class="ui vertical divider">Or</div>
+          <div class="middle aligned row">
+            <div class="column">
+              <div class="ui icon header">
+                <i class="video icon"></i>
+                <a href="https://www.youtube.com/@theprogresselement7464/videos" target="_blank">Videos</a>
+              </div>
+              
+            </div>
+            <div class="column">
+              <div class="ui icon header">
+                <i class="write icon"></i>
+                <a href="https://eisha.notion.site/Guides-0f69b6736d5648d297af1e98a225041b" target="_blank">Blogs / Application Guides</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
