--- a/app/templates/mentorship.html
+++ b/app/templates/mentorship.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <title> Study Abroad Circle </title>
 </head>
-<body>
+<body style="text-align: justify;">
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
     <div style="margin-top: 50px;" class="ui container">
     <h1 class="ui center aligned header"> Study Abroad Circle </h1>
@@ -46,4 +46,6 @@
       <button class="ui olive green button">
         <a href="https://forms.gle/RMxrk8wMNoaBHLK96" target="_blank"> Access Sign Up Form </a>
       </button>
-      
+      "
+</body>
+</html>
