--- a/app/templates/mentorship.html
+++ b/app/templates/mentorship.html
@@ -9,7 +9,7 @@
 <body style="text-align: justify;">
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
     <div style="margin-top: 50px;" class="ui container">
-    <h1 class="ui center aligned header"> Study Abroad Circle </h1>
+    <h1 class="ui center aligned header" style="text-align: center;"> Study Abroad Circle </h1>
     <!-- <form class ="ui form" action="\add" method="POST">
         <div class="field">
             <input type="text" name=task placeholder="Enter a task"><br>
@@ -42,10 +42,9 @@
     </div>
 
 
-    <h2 class="ui header">Sign up to become a mentor or a mentee!</h2>
+    <h2 class="ui header" style="text-align: center;">Sign up to become a mentor or a mentee!</h2>
       <button class="ui olive green button">
         <a href="https://forms.gle/RMxrk8wMNoaBHLK96" target="_blank"> Access Sign Up Form </a>
       </button>
-      "
 </body>
 </html>
