--- a/app/templates/chats.html
+++ b/app/templates/chats.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <title> Study Abroad Circle </title>
+    <style>
+        .ui.container {
+            text-align: center;
+        }
+        .ui.grid.stackable>.column {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
