--- a/app/templates/resources.html
+++ b/app/templates/resources.html
@@ -4,54 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <title> Study Abroad Circle </title>
+    <title>Study Abroad Circle</title>
 </head>
 <body>
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
     <div style="margin-top: 50px;" class="ui container">
-    <h1 class="ui center aligned header"> Study Abroad Circle </h1>
+        <h1 class="ui center aligned header">Study Abroad Circle</h1>
 
-    <div class="ui pointing menu">
-        <a class="active item" href="">
-            <a href="{{ url_for('index') }}">Home</a></button>
-        </a>
-        <a class="item">
-            
-            <a href="{{ url_for('resources') }}">Resources</a></button>
-        </a>
-        <a class="item">
-    
-            <a href="{{ url_for('opportunities') }}">Opportunities</a></button> 
-        </a>
-        <a class="item">
-            <a href="{{ url_for('chats') }}">Chats</a></button> 
-          </a>
-          <a class="item">
-            <a href="{{ url_for('mentorship') }}">Mentorship</a></button> 
-          </a>
+        <div class="ui pointing menu">
+            <a class="active item" href="">
+                <a href="{{ url_for('index') }}">Home</a>
+            </a>
+            <a class="item">
+                <a href="{{ url_for('resources') }}">Resources</a>
+            </a>
+            <a class="item">
+                <a href="{{ url_for('opportunities') }}">Opportunities</a>
+            </a>
+            <a class="item">
+                <a href="{{ url_for('chats') }}">Chats</a>
+            </a>
+            <a class="item">
+                <a href="{{ url_for('mentorship') }}">Mentorship</a>
+            </a>
         </div>
-      </div>
     </div>
-    
 
-
-      <div class="ui placeholder segment">
+    <div class="ui placeholder segment">
         <div class="ui three column stackable center aligned grid">
-          <div class="ui vertical divider">Or</div>
-          <div class="middle aligned row">
-            <div class="column">
-              <div class="ui icon header">
-                <i class="video icon"></i>
-                <a href="https://www.youtube.com/@theprogresselement7464/videos" target="_blank">Videos</a>
-              </div>
-              
+            <div class="ui vertical divider">Or</div>
+            <div class="middle aligned row">
+                <div class="column">
+                    <a href="https://www.youtube.com/@theprogresselement7464/videos" target="_blank">
+                        <button class="ui icon olive button">
+                            <i class="youtube square icon"></i>
+                            Videos
+                        </button>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="https://eisha.notion.site/Guides-0f69b6736d5648d297af1e98a225041b" target="_blank">
+                        <button class="ui icon olive button">
+                            <i class="notion icon"></i>
+                            Blogs / Application Guides
+                        </button>
+                    </a>
+                </div>
             </div>
-            <div class="column">
-              <div class="ui icon header">
-                <i class="write icon"></i>
-                <a href="https://eisha.notion.site/Guides-0f69b6736d5648d297af1e98a225041b" target="_blank">Blogs / Application Guides</a>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
+</body>
+</html>
