--- a/app/templates/chats.html
+++ b/app/templates/chats.html
@@ -39,7 +39,7 @@
 
     <div style="margin-top: 50px;" class="ui container">
         <h2 class="ui header">Join our SAC chats!</h2>
-        <h4 class="ui header" style="text-align: justify;">You can connect with other likeminded students, give and receive help and support throughout your scholarship journey.</h4>
+        <h4 class="ui header" style="text-align: center;">You can connect with other likeminded students, give and receive help and support throughout your scholarship journey.</h4>
         <div class="ui grid stackable">
             <div class="column">
                 <button class="ui olive green button">
