--- a/app/templates/mentorship.html
+++ b/app/templates/mentorship.html
@@ -41,10 +41,13 @@
       </div>
     </div>
 
-
-    <h2 class="ui header" style="text-align: center;">Sign up to become a mentor or a mentee!</h2>
-      <button class="ui olive green button">
-        <a href="https://forms.gle/RMxrk8wMNoaBHLK96" target="_blank"> Access Sign Up Form </a>
-      </button>
+    <div style="margin-top: 50px;" class="ui container">
+        <h2 class="ui header" style="text-align: center;">Sign up to become a mentor or a mentee!</h2>
+        <div style="display: flex; justify-content: center;">
+            <button class="ui olive green button">
+                <a href="https://forms.gle/RMxrk8wMNoaBHLK96" target="_blank"> Access Sign Up Form </a>
+            </button>
+        </div>
+    </div>
 </body>
 </html>
