--- a/app/templates/chats.html
+++ b/app/templates/chats.html
@@ -12,6 +12,11 @@
         .ui.grid.stackable>.column {
             margin-bottom: 20px;
         }
+        .ui.grid.stackable.buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
     </style>
 </head>
 <body>
@@ -40,7 +45,7 @@
     <div style="margin-top: 50px;" class="ui container">
         <h2 class="ui header">Join our SAC chats!</h2>
         <h4 class="ui header" style="text-align: center;">You can connect with other likeminded students, give and receive help and support throughout your scholarship journey.</h4>
-        <div class="ui grid stackable">
+        <div class="ui grid stackable buttons">
             <div class="column">
                 <button class="ui olive green button">
                     <i class="telegram icon"></i><a href="https://t.me/+btX319_AGZplY2U0" target="_blank">Telegram chat</a>
