--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -41,3 +41,4 @@
       </div>
     </div>
 
+    <iframe height="430" width="350" src="https://bot.dialogflow.com/93dc91b0-ca7f-4efb-9535-138964d314cf"></iframe>
