--- a/app/templates/resources.html
+++ b/app/templates/resources.html
@@ -31,7 +31,7 @@
     </div>
 
     <div style="margin-top: 50px;" class="ui container">
-        <h2 class="ui header" style="text-align: center;">Explore scholarship application guides in written and video formats</h2>
+        <h2 class="ui header" style="text-align: center;">Explore scholarship application guides in written and video formats!</h2>
         <div style="display: flex; justify-content: center;">
 
     <div class="ui placeholder segment">
