--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
     <title> Study Abroad Circle </title>
 </head>
 <body>
+     <!-- Logout button -->
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
     <div style="margin-top: 50px;" class="ui container">
         <h1 class="ui center aligned header"> Study Abroad Circle </h1>
