--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
+<!-- This code extends the base template layout.html -->
+
 {% block body %}
+<!-- This block of code is the content section of the web page -->
 <div style="margin-top: 50px;" class="ui container">
   <h2 class="ui center aligned header" > Sign up | Study Abroad Circle </h2>
   {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
