--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
+<!-- This code extends the base template layout.html -->
+
 
 {% block body %}
+<!-- This block of code is the content section of the web page -->
   <div style="margin-top: 50px;" class="ui container">
     <h2 class="ui center aligned header" style="margin-bottom: 40px;">Welcome to Study Abroad Circle!</h2>
     {% if error %}
