--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,6 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div class=page>
   <div class=metanav>
+    <!-- The div with class "page" contains the main content of the webpage.
+  The div with class "metanav" contains a login/logout link depending on whether the user is currently logged in or not. -->
   {% if not session.logged_in %}
     <a href="{{ url_for('login') }}">log in</a><br>
     <a href="{{ url_for('sign_up') }}">sign up</a>
