--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
+<!-- This code extends the base template layout.html -->
+
 {% block body %}
 <div style="margin-top: 50px;" class="ui container">
   <h2 class="ui center aligned header" > Login | Study Abroad Circle</h2>
