--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,19 +18,31 @@
                     <a href="{{ url_for('index') }}">Home</a></button>
                 </a>
                 <a class="item">
-                    <a href="{{ url_for('resources') }}">Resources</a></button>
+                    <a href="{{ url_for('videos') }}">Video Guides</a></button>
                 </a>
                 <a class="item">
-                    <a href="{{ url_for('opportunities') }}">Opportunities</a></button> 
+                    <a href="{{ url_for('opportunities') }}">Written Guides</a></button> 
                 </a>
                 <a class="item">
-                    <a href="{{ url_for('chats') }}">Chats</a></button> 
+                    <a href="{{ url_for('chats') }}">Group Chats</a></button> 
                 </a>
                 <a class="item">
                     <a href="{{ url_for('mentorship') }}">Mentorship</a></button> 
                 </a>
             </div>
         </div>
+
+        <script type="text/javascript">
+            (function(d, m){
+                var kommunicateSettings = 
+                    {"appId":"2be0ffe1cd81d18a72b4bd02814f1ac42","popupWidget":true,"automaticChatOpenOnNavigation":true};
+                var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+                s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+                var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+                window.kommunicate = m; m._globals = kommunicateSettings;
+            })(document, window.kommunicate || {});
+            /* NOTE: Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+        </script>
 
         <div style="margin-top: 50px; text-align: justify;" class="ui container">
     <p>
