--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <title>Study Abroad Circle</title>
 </head>
-<body style="text-align: justify;">
+<body>
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
     <div style="margin-top: 50px;" class="ui container">
-        <h1 class="ui center aligned header" style="text-align: center;">Study Abroad Circle</h1>
+        <h1 class="ui center aligned header">Study Abroad Circle</h1>
 
         <div class="ui pointing menu">
-            <a class="active item">
+            <a class="active item" href="">
                 <a href="{{ url_for('index') }}">Home</a>
             </a>
             <a class="item">
-                <a href="{{ url_for('resources') }}">Resources</a>
+                <a href="{{ url_for('videos') }}">Video Guides</a>
             </a>
             <a class="item">
-                <a href="{{ url_for('opportunities') }}">Opportunities</a>
+                <a href="{{ url_for('opportunities') }}">Written Guides</a>
             </a>
             <a class="item">
-                <a href="{{ url_for('chats') }}">Chats</a>
+                <a href="{{ url_for('chats') }}">Group Chats</a>
             </a>
             <a class="item">
                 <a href="{{ url_for('mentorship') }}">Mentorship</a>
             </a>
-            <div class="right menu">
-                <div class="item"></div>
+        </div>
+    </div>
+
+    <div style="margin-top: 50px;" class="ui container">
+        <div style="display: flex; justify-content: center;">
+            <div class="ui column center aligned">
+                <h3 style="text-align: center; margin-bottom: 10px;">Explore written scholarship application guides!</h3>
+                <a href="https://eisha.notion.site/Guides-0f69b6736d5648d297af1e98a225041b" target="_blank">
+                    <button class="ui black button" style="margin-left: 10px; display: block; margin: 0 auto;">
+                        <i class="fa fa-book"></i>
+                        Notion Blog
+                    </button>
+                </a>
             </div>
         </div>
-
-        <iframe height="430" width="350" src="https://bot.dialogflow.com/93dc91b0-ca7f-4efb-9535-138964d314cf"></iframe>
-
-        <script type="text/javascript">
-            (function(d, m){
-                var kommunicateSettings = 
-                    {"appId":"2be0ffe1cd81d18a72b4bd02814f1ac42","popupWidget":true,"automaticChatOpenOnNavigation":true};
-                var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-                s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-                var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-                window.kommunicate = m; m._globals = kommunicateSettings;
-            })(document, window.kommunicate || {});
-            /* NOTE: Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
-        </script>
-
     </div>
-</body>
-</html>
+
+
+    
+    <script type="text/javascript">
+        (function(d, m){
+            var kommunicateSettings = 
+                {"appId":"2be0ffe1cd81d18a72b4bd02814f1ac42","popupWidget":true,"automaticChatOpenOnNavigation":true};
+            var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+            s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+            var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+            window.kommunicate = m; m._globals = kommunicateSettings;
+       
