--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -23,6 +23,19 @@
       <a class="ui green button" href="/signup" method="GET" style="margin-right: 20px;">Sign up</a>
       <a class="ui blue button" href="/login" method="GET" style="margin-left: 20px;">Log in</a>
     </div>
+
+    <script type="text/javascript">
+      (function(d, m){
+          var kommunicateSettings = 
+              {"appId":"2be0ffe1cd81d18a72b4bd02814f1ac42","popupWidget":true,"automaticChatOpenOnNavigation":true};
+          var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+          s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+          var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+          window.kommunicate = m; m._globals = kommunicateSettings;
+      })(document, window.kommunicate || {});
+      /* NOTE: Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+  </script>
+  
   </div>
   {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
