--- a/app/templates/chats.html
+++ b/app/templates/chats.html
@@ -23,8 +23,8 @@
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
     <div style="margin-top: 50px;" class="ui container">
         <h1 class="ui center aligned header"> Study Abroad Circle </h1>
-        <div class="ui pointing menu">
-            <a class="active item" href="">
+        <div class="ui compact menu">
+            <a class="item">
                 <a href="{{ url_for('index') }}">Home</a>
             </a>
             <a class="item">
@@ -54,27 +54,64 @@
             /* NOTE: Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
         </script>
 
-<div style="margin-top: 50px;" class="ui container">
-    <div style="display: flex; justify-content: center;">
+<!-- <div style="margin-top: 50px;" class="ui container">
+    <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="ui column center aligned">
             <h3 style="text-align: center; margin-bottom: 10px;">Join the SAC support group chats</h3>
             <h4 class="ui header" style="text-align: center;">You can connect with other likeminded students, give and receive help and support throughout your scholarship journey.</h4>
-    <div class="ui grid stackable buttons">
-        <div class="column">
-            <button class="ui olive green button">
-                <i class="telegram icon"></i><a href="https://t.me/+btX319_AGZplY2U0" target="_blank">Telegram chat</a>
-            </button>
         </div>
-        <div class="column">
-            <button class="ui olive green button">
-                <i class="whatsapp icon"></i><a href="https://chat.whatsapp.com/FbkdImJ9ov7AyszyTutVWO" target="_blank">WhatsApp chat</a>
-            </button>
+
+        <div style="margin-top: 10px;">
+            <div class="ui grid stackable buttons">
+                <div class="column">
+                    <button class="ui olive green button">
+                        <i class="telegram icon"></i><a href="https://t.me/+btX319_AGZplY2U0" target="_blank">Telegram chat</a>
+                    </button>
+                </div>
+            </div>
+            <div class="ui grid stackable buttons" style="margin-top: 10px;">
+                <div class="column">
+                    <button class="ui olive green button">
+                        <i class="whatsapp icon"></i><a href="https://chat.whatsapp.com/FbkdImJ9ov7AyszyTutVWO" target="_blank">WhatsApp chat</a>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
-            
+</div> -->
+<div style="margin-top: 50px;" class="ui container">
+    <div style="display: flex; justify-content: center; flex-direction: column; align-items: center;">
+        <div class="ui column center aligned">
+            <h3 style="text-align: center; margin-bottom: 30px;">Join the SAC support group chats</h3>
+            <h4 class="ui header" style="text-align: center;">You can connect with other likeminded students, give and receive help and support throughout your scholarship journey.</h4>
         </div>
+
+        <div>
+            <div class="ui grid stackable buttons" style="margin-top: 30px;">
+                <div class="column">
+                    <button class="ui blue button">
+                        <i class="telegram icon"></i><a href="https://t.me/+btX319_AGZplY2U0" target="_blank" style="color: white;">Telegram chat</a>
+                    </button>
+                </div>
+            </div>
+            <div class="ui grid stackable buttons" style="margin-top: 10px;">
+                <div class="column">
+                    <button class="ui  green button">
+                        <i class="whatsapp icon"></i><a href="https://chat.whatsapp.com/FbkdImJ9ov7AyszyTutVWO" target="_blank" style="color: white;">WhatsApp chat</a>
+                    </button>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 </div>
+
+
+
+
+
+  
 
 
 </body>
