--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -11,10 +11,9 @@
 <body>
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
     <div style="margin-top: 50px;" class="ui container">
-        <h1 class="ui center aligned header">Study Abroad Circle</h1>
-
-        <div class="ui pointing menu">
-            <a class="active item" href="">
+        <h1 class="ui center aligned header"> Study Abroad Circle </h1>
+        <div class="ui compact menu">
+            <a class="item">
                 <a href="{{ url_for('index') }}">Home</a>
             </a>
             <a class="item">
@@ -36,7 +35,7 @@
         <div style="display: flex; justify-content: center;">
             <div class="ui column center aligned">
                 <h3 style="text-align: center; margin-bottom: 10px;">Explore written scholarship application guides!</h3>
-                <a href="https://eisha.notion.site/Guides-0f69b6736d5648d297af1e98a225041b" target="_blank">
+                <a href="https://eisha.notion.site/Study-Abroad-Circle-Resources-e48d8d33cdce44ea9bd388f286927625" target="_blank">
                     <button class="ui black button" style="margin-left: 10px; display: block; margin: 0 auto;">
                         <i class="fa fa-book"></i>
                         Notion Blog
@@ -46,8 +45,6 @@
         </div>
     </div>
 
-
-    
     <script type="text/javascript">
         (function(d, m){
             var kommunicateSettings = 
