--- a/app/templates/videos.html
+++ b/app/templates/videos.html
@@ -9,10 +9,9 @@
 <body>
     <button class="ui olive button" style="margin-top: 20px; margin-left: 10px;"><a href="{{ url_for('log_out') }}">Log out</a></button>
     <div style="margin-top: 50px;" class="ui container">
-        <h1 class="ui center aligned header">Study Abroad Circle</h1>
-
-        <div class="ui pointing menu">
-            <a class="active item" href="">
+        <div style="margin-top: 50px;" class="ui container">
+            <h1 class="ui center aligned header"> Study Abroad Circle </h1>
+            <div class="ui compact menu">
                 <a href="{{ url_for('index') }}">Home</a>
             </a>
             <a class="item">
